--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>实时 GPU 仪表板 (Glass UI) — 丝滑曲线版</title>
+    <title>实时 GPU 仪表板</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
     <style>
         @property --gauge-angle {
@@ -325,7 +325,7 @@
     </div>
     
     <div class="container">
-        <h1>🚀 实时 GPU 仪表板（丝滑曲线）</h1>
+        <h1>🚀 实时 GPU 仪表板</h1>
 
         <main id="dashboard">
             <p style="text-align: center; font-size: 1.2em; grid-column: 1 / -1;">
@@ -337,7 +337,7 @@
             <div class="glass-tint"></div>
             <div class="glass-shine"></div>
             <div class="glass-content">
-                <h2>实时占用率 (滚动图表)</h2>
+                <h2>实时占用率</h2>
                 
                 <h3 class="chart-title">GPU 利用率 (%)</h3>
                 <div class="chart-wrapper">
